// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article extras content 1`] = `
<View>
  <RelatedArticles />
  <View>
    <ArticleTopics />
  </View>
  <ArticleComments
    articleId="dummy-article-id"
    commentCount={123}
    commentsEnabled={true}
    url="dummy-article-url"
  />
</View>
`;

exports[`2. article extras content on tablet 1`] = `
<View>
  <RelatedArticles />
  <View>
    <ArticleTopics />
  </View>
  <ArticleComments
    articleId="dummy-article-id"
    commentCount={123}
    commentsEnabled={true}
    url="dummy-article-url"
  />
  <SponsoredAd
    numberOfAds={4}
  />
</View>
`;

exports[`3. article extras error 1`] = `
<View>
  <Text>
    It looks like you're offline
  </Text>
  <Text>
    Some features, such as related articles and comments, may not be available
  </Text>
  <View
    accessibilityLabel="Retry"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      title="Retry"
    >
      Retry
    </Text>
  </View>
</View>
`;
